# spacecraft

./: .gitignore  CROSS.toml  Cargo.toml  README.md  about.hbs  about.toml  deny.toml  index.html  justfile
assets/gltf/: Spitfire.glb
src/: content.rs  ecs.rs  level.rs  lib.rs  main.rs  state.rs  systems.rs
src/ecs/: components.rs  resources.rs
src/systems/: abilities.rs  ally.rs  asteroid_mesh.rs  atmosphere.rs  audio.rs  backdrop.rs  boss.rs  camera.rs  combat.rs  common.rs  comms.rs  crt.rs  cutscene.rs  director.rs  enemies.rs  enemy_mesh.rs  flight.rs  game.rs  hangar.rs  hud.rs  laser.rs  missiles.rs  pickups.rs  planet_texture.rs  reticle.rs  ring_fx.rs  scenery.rs  setup.rs  shield.rs  shop.rs  spawn.rs  structures.rs  synthwave.rs  textures.rs  tuning.rs  weapons.rs
